Fix gaps between list elements
리스트 사이 간격 조정

--- a/www/pages/race_num/css/race_num.scss
+++ b/www/pages/race_num/css/race_num.scss
@@ -48,6 +48,7 @@
           width: 100%;
           td {
             font-size: 20px;
+            padding: 15px 0;
           }
           td:first-child {
             width: 85%;
