--- a/www/pages/racenum_add/css/racenum_add.scss
+++ b/www/pages/racenum_add/css/racenum_add.scss
@@ -26,11 +26,12 @@
           width: 100%;
           td {
             font-size: 20px;
+            padding: 15px 0;
             input {
                 width: 20px;
                 height: 20px;
                 position: absolute;
-                top: 20%;
+                top: 35%;
                 left: 29%;
             }
           }
